// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a 3-line inline bibliography renders correctly 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    <dt-article>
      <h1>
        Untitled
      </h1>
      <div
        class="engrafo-metadata"
      >
        <div
          class="authors"
        />
        <div
          class="engrafo-metadata-custom"
        />
      </div>
      

      <p>
        Refer to 
        <a
          class="engrafo-cite"
          href="#cite-1"
          onclick="event.preventDefault()"
        >
          <span
            data-hover-ref="dt-cite-hover-box-1"
          >
            [1]
          </span>
        </a>
         then refer to 
        <a
          class="engrafo-cite"
          href="#cite-2"
          onclick="event.preventDefault()"
        >
          <span
            data-hover-ref="dt-cite-hover-box-2"
          >
            [2]
          </span>
        </a>
         but misspell 
        <span
          class="engrafo-cite engrafo-missing-cite"
        >
          [?]
        </span>
      </p>
      




    </dt-article>
    <dt-appendix>
      

      


      <div
        class="l-body"
      >
        <h3>
          References
        </h3>
        <dt-bibliography>
          <ol>
            <li
              id="cite-1"
            >
              <strong>
                Convolutional networks can learn to generate affinity graphs for image segmentation.
              </strong>
              <br />
              S. C. Turaga, J. F. Murray, V. Jain, F. Roth, M. Helmstaedter, K. Briggman, W. Denk, and H. S. Seung. 
              <em>
                Neural Comput.
              </em>
              , 22(2):511–538, Feb. 2010.
            </li>
            <li
              id="cite-2"
            >
              <strong>
                Segmentation fusion for connectomics.
              </strong>
              <br />
              A. Vazquez-Reina, M. Gelbart, D. Huang, J. Lichtman, E. Miller, and H. Pfister. In 
              <em>
                ICCV
              </em>
              , 2011.
            </li>
            <li
              id="cite-3"
            >
              <strong>
                Image segmentation by size-dependent single linkage clustering of a watershed basin graph.
              </strong>
              <br />
              A. Zlateski and H. S. Seung. 
              <em>
                CoRR
              </em>
              , abs/1505.00249, 2015.
            </li>
          </ol>
        </dt-bibliography>
      </div>
      

    </dt-appendix>
    <div
      id="footnote-hover-boxes-container"
    />
    <div
      id="cite-hover-boxes-container"
    >
      <div
        class="dt-hover-box"
        id="dt-cite-hover-box-1"
        style="display:none;"
      >
        <strong>
          Convolutional networks can learn to generate affinity graphs for image segmentation.
        </strong>
        <br />
        S. C. Turaga, J. F. Murray, V. Jain, F. Roth, M. Helmstaedter, K. Briggman, W. Denk, and H. S. Seung. 
        <em>
          Neural Comput.
        </em>
        , 22(2):511–538, Feb. 2010.
      </div>
      <div
        class="dt-hover-box"
        id="dt-cite-hover-box-2"
        style="display:none;"
      >
        <strong>
          Segmentation fusion for connectomics.
        </strong>
        <br />
        A. Vazquez-Reina, M. Gelbart, D. Huang, J. Lichtman, E. Miller, and H. Pfister. In 
        <em>
          ICCV
        </em>
        , 2011.
      </div>
    </div>
  </div>
</body>
`;

exports[`a basic bibliography renders correctly 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    <dt-article>
      <h1>
        Untitled
      </h1>
      <div
        class="engrafo-metadata"
      >
        <div
          class="authors"
        />
        <div
          class="engrafo-metadata-custom"
        />
      </div>
      

      <p>
        Hello
        <a
          class="engrafo-cite"
          href="#cite-1"
          onclick="event.preventDefault()"
        >
          <span
            data-hover-ref="dt-cite-hover-box-0"
          >
            [1]
          </span>
        </a>
         World
        <dt-fn>
          <sup>
            <span
              data-hover-ref="dt-fn-hover-box-0"
              id="fn-1"
              style="cursor:pointer"
            >
              1
            </span>
          </sup>
        </dt-fn>
      </p>
      




    </dt-article>
    <dt-appendix>
      

      


      <div
        class="l-body"
      >
        <h3>
          Footnotes
        </h3>
        <dt-fn-list>
          <ol>
            <li>
              Just checking the bibliography comes after footnotes.
            </li>
          </ol>
        </dt-fn-list>
        <h3>
          References
        </h3>
        <dt-bibliography>
          <ol>
            <li
              id="cite-1"
            >
              <strong>
                Compositional morphology for word representations and language modelling.
              </strong>
              <br />
              Joe Bloggs and Phil Jones. 2014. In 
              <em>
                Proceedings of ICML
              </em>
              .
            </li>
            <li
              id="cite-2"
            >
              <strong>
                Morphological word-embeddings.
              </strong>
              <br />
              Ryan Cotterell and Hinrich Sch
              <span>
                ü
              </span>
              tze. 2015. In 
              <em>
                Proceedings of HLT-NAACL
              </em>
              .
            </li>
            <li
              id="cite-3"
            >
              <strong>
                Just a title, not a source.
              </strong>
              <br />
              Foo and Bar. 2020.
            </li>
          </ol>
        </dt-bibliography>
      </div>
      

    </dt-appendix>
    <div
      id="footnote-hover-boxes-container"
    >
      <div
        class="dt-hover-box"
        id="dt-fn-hover-box-0"
        style="display:none;"
      >
        Just checking the bibliography comes after footnotes.
      </div>
    </div>
    <div
      id="cite-hover-boxes-container"
    >
      <div
        class="dt-hover-box"
        id="dt-cite-hover-box-0"
        style="display:none;"
      >
        <strong>
          Compositional morphology for word representations and language modelling.
        </strong>
        <br />
        Joe Bloggs and Phil Jones. 2014. In 
        <em>
          Proceedings of ICML
        </em>
        .
      </div>
    </div>
  </div>
</body>
`;
